--- a/12112015.md
+++ b/12112015.md
@@ -1,7 +1,7 @@
 # 12th November, 2015
 \- Hasin Hayder
 
-### Freebies & Graphic Resources
+### Freebies & Graphics Resources
 1. [100 best photos from Picjumbo, selected by Viktor himself.](https://premium.wpmudev.org/blog/wordpress-professional/)
 2. [Feather icon set, a collection of 335 beautiful line icons under creative commons.](http://www.toicon.com/series)
 3. [A freaking collection of some awesome stock resources](https://github.com/neutraltone/awesome-stock-resources)
