--- a/12112015.md
+++ b/12112015.md
@@ -2,7 +2,7 @@
 \- Hasin Hayder
 
 ### Freebies & Graphic Resources
-1. [100 best photos from Picjumbo, selected by Viktor himself.](https://premium.wpmudev.org/blog/wordpress-professional/)
+1. [100 best photos from Picjumbo, selected by Viktor himself.](http://www.webdesignerdepot.com/2015/11/free-download-100-best-picjumbo-images/)
 2. [Feather icon set, a collection of 335 beautiful line icons under creative commons.](http://www.toicon.com/series)
 3. [A freaking collection of some awesome stock resources](https://github.com/neutraltone/awesome-stock-resources)
 4. [Brand New Set Of 40+ Material Design Backgrounds](http://www.oxygenna.com/news/brand-new-set-of-40-material-design-backgrounds)
